# Vellum

./: CMakeLists.txt  README.md  resources.qrc
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/canvas/: CanvasWidget.cpp  CanvasWidget.h
src/export/: PdfExporter.cpp  PdfExporter.h
src/model/: Commands.cpp  Commands.h  Document.cpp  Document.h  Stroke.cpp  Stroke.h  TextBox.h
src/shapes/: ShapeRecognizer.cpp  ShapeRecognizer.h
src/storage/: SqliteStore.cpp  SqliteStore.h
